propertee-core/src/test/resources/tests/26_error_div_zero.expected
Runtime error: Runtime Error at line 2:4: Division by zero
