propertee-core/src/test/resources/tests/26_error_div_zero.tee
// Test: Division by zero should error
x = 10 / 0
